# agentcheck

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  action-example.yml  pyproject.toml
agentcheck/: __init__.py  __main__.py  cli.py  report.py  rules.py  scanner.py
fixtures/bad-skill/: SKILL.md  install.sh
fixtures/good-skill/: .env.example  SKILL.md
fixtures/good-skill/docs/: guide.md
fixtures/good-skill/scripts/: example.py
tests/: test_agentcheck.py
