[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agentcheck"
version = "0.1.0"
description = "Read-only pre-publish checker for Claude/Cursor Agent Skill directories"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Jiangki" }]
keywords = ["agent", "skills", "claude", "cursor", "linter", "security"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Jiangki/agentcheck"
Issues = "https://github.com/Jiangki/agentcheck/issues"

[project.scripts]
agentcheck = "agentcheck.cli:main"

[tool.setuptools.packages.find]
include = ["agentcheck*"]
